fixing overlapping container

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ main {
 
 .Hide {
   visibility: hidden;
+  height: 0;
 }
 
 .Show {
@@ -75,6 +76,7 @@ main {
   height: 10vh;
   padding: 10px;
   background-color: #2c3a3c;
+  z-index: 100;
 }
 .Categories--Container {
   background-color: #2c3a3c;
